--- a/Cargo.toml
+++ b/Cargo.toml
@@ -96,13 +96,13 @@ encoding_rs = "0.8"
 futures-core = { version = "0.3.0", default-features = false }
 futures-util = { version = "0.3.0", default-features = false }
 http-body = "0.4.0"
-hyper = { path = "../hyper", default-features = false, features = ["full"] }
-h2 = { path = "../h2" }
+hyper = { git = "https://github.com/futurewei-cloud/hyper", branch = "wasmdev", default-features = false, features = ["full"] }
+h2 = { git = "https://github.com/futurewei-cloud/h2", branch = "wasmdev" }
 once_cell = "1"
 log = "0.4"
 mime = "0.3.16"
 percent-encoding = "2.1"
-tokio = { path = "../tokio/tokio", default-features = false, features = ["net", "time"] }
+tokio = { git = "https://github.com/futurewei-cloud/tokio", branch = "wasmdev", default-features = false, features = ["net", "time"] }
 pin-project-lite = "0.2.0"
 ipnet = "2.3"
 
@@ -128,7 +128,7 @@ proc-macro-hack = { version = "0.5.19", optional = true }
 
 ## compression
 async-compression = { version = "0.3.13", default-features = false, features = ["tokio"], optional = true }
-tokio-util = { path = "../tokio/tokio-util", default-features = false, features = ["codec", "io"], optional = true }
+tokio-util = { git = "https://github.com/futurewei-cloud/tokio", branch = "wasmdev", default-features = false, features = ["codec", "io"], optional = true }
 
 ## socks
 tokio-socks = { version = "0.5.1", optional = true }
@@ -138,12 +138,12 @@ trust-dns-resolver = { version = "0.21", optional = true }
 
 [target.'cfg(target_os = "wasi")'.dev-dependencies]
 env_logger = "0.8"
-hyper = { path = "../hyper", default-features = false, features = ["full"] }
+hyper = { git = "https://github.com/futurewei-cloud/hyper", branch = "wasmdev", default-features = false, features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 libflate = "1.0"
 brotli_crate = { package = "brotli", version = "3.3.0" }
 doc-comment = "0.3"
-tokio = { path = "../tokio/tokio", default-features = false, features = ["macros", "rt"] }
+tokio = { git = "https://github.com/futurewei-cloud/tokio", branch = "wasmdev" default-features = false, features = ["macros", "rt"] }
 
 [target.'cfg(windows)'.dependencies]
 winreg = "0.10"
