--- a/Cargo.toml
+++ b/Cargo.toml
@@ -96,7 +96,7 @@ encoding_rs = "0.8"
 futures-core = { version = "0.3.0", default-features = false }
 futures-util = { version = "0.3.0", default-features = false }
 http-body = "0.4.0"
-hyper = { git = "https://github.com/futurewei-cloud/hyper", branch = "wasmdev", default-features = false, features = ["full"] }
+hyper = { git = "https://github.com/futurewei-cloud/hyper", branch = "release/v0.14.20", default-features = false, features = ["full"] }
 h2 = { git = "https://github.com/futurewei-cloud/h2", branch = "wasmdev" }
 once_cell = "1"
 log = "0.4"
@@ -138,12 +138,12 @@ trust-dns-resolver = { version = "0.21", optional = true }
 
 [target.'cfg(target_os = "wasi")'.dev-dependencies]
 env_logger = "0.8"
-hyper = { git = "https://github.com/futurewei-cloud/hyper", branch = "wasmdev", default-features = false, features = ["full"] }
+hyper = { git = "https://github.com/futurewei-cloud/hyper", branch = "release/v0.14.20", default-features = false, features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 libflate = "1.0"
 brotli_crate = { package = "brotli", version = "3.3.0" }
 doc-comment = "0.3"
-tokio = { git = "https://github.com/futurewei-cloud/tokio", branch = "wasmdev" default-features = false, features = ["macros", "rt"] }
+tokio = { git = "https://github.com/futurewei-cloud/tokio", branch = "wasmdev", default-features = false, features = ["macros", "rt"] }
 
 [target.'cfg(windows)'.dependencies]
 winreg = "0.10"
